--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Jekyll Defaults
-title: blueface
+title: Pavan Kumar AV
 description: A small and simple site I made to test out Jekyll.
 baseurl: "" # the subpath of your site, e.g. /blog
 
@@ -19,3 +19,5 @@ navigation:
   url: /archives/
 - text: Tags
   url: /tags/
+- text: Contacts
+  url: /contacts/
